--- a/SMS_Presentation/SMS_Presentation.csproj
+++ b/SMS_Presentation/SMS_Presentation.csproj
@@ -195,6 +195,7 @@
       <HintPath>..\packages\System.Net.Sockets.4.1.0\lib\net46\System.Net.Sockets.dll</HintPath>
     </Reference>
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.0.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
     </Reference>
@@ -303,7 +304,15 @@
     <Compile Include="AutoMapper\AutoMapperConfig.cs" />
     <Compile Include="AutoMapper\DomainToViewModelMappingProfile.cs" />
     <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
+    <Compile Include="Controllers\AgendaController.cs" />
+    <Compile Include="Controllers\BaseAdminController.cs" />
+    <Compile Include="Controllers\ControleAcessoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Controllers\NoticiaController.cs" />
+    <Compile Include="Controllers\NotificacaoController.cs" />
+    <Compile Include="Controllers\TarefaController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Extensions\HMTLHelperExtensions.cs" />
     <Compile Include="Extensions\MVCButtonExtensions.cs" />
     <Compile Include="Extensions\WebMvcExtensions.cs" />
@@ -2981,6 +2990,12 @@
     <Content Include="Views\Shared\_TopNavbar2.cshtml" />
     <Content Include="Views\Shared\_TopNavbar_Admin.cshtml" />
     <Content Include="Views\Shared\_TopNavbar_Admin_Y.cshtml" />
+    <Content Include="Views\BaseAdmin\CarregarBase.cshtml" />
+    <Content Include="Views\BaseAdmin\CarregarDesenvolvimento.cshtml" />
+    <Content Include="Views\ControleAcesso\Login.cshtml" />
+    <Content Include="Views\ControleAcesso\TrocarSenha.cshtml" />
+    <Content Include="Views\ControleAcesso\TrocarSenhaInicio.cshtml" />
+    <Content Include="Views\ControleAcesso\GerarSenha.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -3072,6 +3087,12 @@
     <Folder Include="Imagens\Agenda\1\20\Anexos\" />
     <Folder Include="Imagens\Agenda\1\21\Anexos\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Agenda\" />
+    <Folder Include="Views\Log\" />
+    <Folder Include="Views\Noticia\" />
+    <Folder Include="Views\Notificacao\" />
+    <Folder Include="Views\Tarefa\" />
+    <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -3105,6 +3126,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="App_Start\ERP_Condominios_Resource.resx" />
     <EmbeddedResource Include="App_Start\SMS_Mensagens.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SMS_Mensagens.Designer.cs</LastGenOutput>
