--- a/SMS_Presentation/SMS_Presentation.csproj
+++ b/SMS_Presentation/SMS_Presentation.csproj
@@ -671,61 +671,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Imagens\1\Ambiente\1\Fotos\salao-de-festas.jpg" />
-    <Content Include="Imagens\1\Ambiente\2\Fotos\churrasqueira.jpg" />
-    <Content Include="Imagens\1\Ambiente\3\Fotos\espaco_gourmet.jpg" />
-    <Content Include="Imagens\1\Ambiente\4\Fotos\cronica-birosca.jpg" />
-    <Content Include="Imagens\1\Ambiente\5\Fotos\hondaCivic.jpg" />
-    <Content Include="Imagens\1\Ambiente\6\Fotos\ftc-salao-jogos-decoracao-01.jpg" />
-    <Content Include="Imagens\1\Ambiente\7\Fotos\academia-campanha-1.jpg" />
-    <Content Include="Imagens\1\Condominio\1\Anexos\GestaoAcademica_MindMap_Versao_1.jpg" />
-    <Content Include="Imagens\1\Condominio\1\Fotos\67345661_2429151403774918_6154599680316538880_n.jpg" />
-    <Content Include="Imagens\1\Condominio\1\Fotos\67360779_2429151300441595_9147533595991080960_n.jpg" />
-    <Content Include="Imagens\1\Equipamento\10\Fotos\elevador.png" />
-    <Content Include="Imagens\1\Equipamento\11\Fotos\HondaCRV.jpg" />
-    <Content Include="Imagens\1\Equipamento\1\Fotos\notebook.jpg" />
-    <Content Include="Imagens\1\Equipamento\2\Fotos\geladeira.jpg" />
-    <Content Include="Imagens\1\Equipamento\3\Fotos\notebook.jpg" />
-    <Content Include="Imagens\1\Equipamento\4\Fotos\geladeira.jpg" />
-    <Content Include="Imagens\1\Equipamento\5\Fotos\elevador.png" />
-    <Content Include="Imagens\1\Equipamento\6\Fotos\escrivaninha.jpg" />
-    <Content Include="Imagens\1\Equipamento\7\Fotos\pabx_sistema.jpg" />
-    <Content Include="Imagens\1\Equipamento\8\Fotos\pabx_sistema.jpg" />
-    <Content Include="Imagens\1\Equipamento\9\Fotos\pabx_sistema.jpg" />
-    <Content Include="Imagens\1\Fornecedores\1\Anexos\Ferrari.jpg" />
-    <Content Include="Imagens\1\Fornecedores\1\Fotos\a1.jpg" />
-    <Content Include="Imagens\1\Fornecedores\1\Fotos\FotoBase.jpg" />
-    <Content Include="Imagens\1\Fornecedores\2\Fotos\Amoedo_logo.png" />
-    <Content Include="Imagens\1\Fornecedores\2\Fotos\Logo_RTI.png" />
-    <Content Include="Imagens\1\Fornecedores\3\Fotos\Kalunga_Logo.png" />
-    <Content Include="Imagens\1\Fornecedores\4\Fotos\a4.jpg" />
-    <Content Include="Imagens\1\Noticias\1\Fotos\162596622360ea468f148f4_1625966223_3x2_lg.jpg" />
-    <Content Include="Imagens\1\Noticias\2\Fotos\_117875883_cuba-esposa-promo05.png" />
-    <Content Include="Imagens\1\Noticias\3\Fotos\_methode_times_prod_web_bin_81c40a14-f063-11eb-8f01-2c678acbb979.jpg" />
-    <Content Include="Imagens\1\Produtos\1\QR\bombay_garrafa.jpg" />
-    <Content Include="Imagens\1\Produtos\2\Fotos\Desinfetante.jpg" />
-    <Content Include="Imagens\1\Produtos\5\Fotos\Desinfetante.jpg" />
-    <Content Include="Imagens\1\Produtos\7\Anexos\martelo.jpg" />
-    <Content Include="Imagens\1\Produtos\7\Fotos\martelo.jpg" />
-    <Content Include="Imagens\1\Produtos\8\Fotos\bombay_garrafa.jpg" />
-    <Content Include="Imagens\1\Produtos\9\Fotos\zoom-Suvinil_RendeCobreMuito_36L.jpg" />
-    <Content Include="Imagens\1\Unidade\7\Anexos\1243152.jpg" />
-    <Content Include="Imagens\1\Unidade\7\Anexos\60559151_2315865115103548_1977158868676902912_n.jpg" />
-    <Content Include="Imagens\1\Usuario\1\Fotos\FotoOficial.jpg" />
-    <Content Include="Imagens\1\Usuario\2\Fotos\FotoCouve.jpg" />
-    <Content Include="Imagens\1\Usuario\3\Fotos\FotoCouve.jpg" />
-    <Content Include="Imagens\1\Usuario\4\Fotos\FotoMaluquete.jpg" />
-    <Content Include="Imagens\1\Veiculo\10\Anexos\Ferrari.jpg" />
-    <Content Include="Imagens\1\Veiculo\11\Anexos\Ferrari.jpg" />
-    <Content Include="Imagens\1\Veiculo\12\Anexos\HondaCRV.jpg" />
-    <Content Include="Imagens\1\Veiculo\13\Anexos\Mercedes-Benz-AMG-E-63-EX.jpg" />
-    <Content Include="Imagens\1\Veiculo\2\Anexos\toyota_yaris.jpg" />
-    <Content Include="Imagens\1\Veiculo\3\Anexos\hondaCivic.jpg" />
-    <Content Include="Imagens\1\Veiculo\4\Anexos\Pajero.jpg" />
-    <Content Include="Imagens\1\Veiculo\5\Anexos\Brasilia.jpg" />
-    <Content Include="Imagens\1\Veiculo\6\Anexos\Ferrari.jpg" />
-    <Content Include="Imagens\1\Veiculo\8\Anexos\hondaCivic.jpg" />
-    <Content Include="Imagens\1\Veiculo\9\Anexos\Pajero.jpg" />
     <Content Include="Imagens\Base\FotoBase.jpg" />
     <Content Include="Imagens\Base\icone_imagem.jpg" />
     <Content Include="Images\1.jpg" />
@@ -1829,37 +1774,6 @@
     <Content Include="fonts\font-awesome\scss\_screen-reader.scss" />
     <Content Include="fonts\font-awesome\scss\_stacked.scss" />
     <Content Include="fonts\font-awesome\scss\_variables.scss" />
-    <Content Include="Imagens\1\Agenda\14\Anexos\Notificacao_1_13082021.pdf" />
-    <Content Include="Imagens\1\Agenda\9\Anexos\AgendaLista_28072021.pdf" />
-    <Content Include="Imagens\1\Ambiente\1\Anexos\AgendaLista_28072021 %281%29 %281%29.pdf" />
-    <Content Include="Imagens\1\Ambiente\3\Anexos\AgendaLista_28072021 %281%29 %281%29.pdf" />
-    <Content Include="Imagens\1\Ambiente\4\Anexos\Processo_Cydia.pdf" />
-    <Content Include="Imagens\1\Ambiente\5\Anexos\Processo_Cydia.pdf" />
-    <Content Include="Imagens\1\Autorizacoes\2\Anexos\NotificacaoLista_13082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Condominio\1\Anexos\AgendaLista_28072021 %281%29.pdf" />
-    <Content Include="Imagens\1\Condominio\1\Anexos\TarefaLista_13082021.pdf" />
-    <Content Include="Imagens\1\Equipamento\7\Anexos\ProdutoLista_30082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Equipamento\8\Anexos\ProdutoLista_30082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Equipamento\9\Anexos\ProdutoLista_30082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Fornecedores\1\Anexos\FornecedorLista_16082021.pdf" />
-    <Content Include="Imagens\1\Fornecedores\3\Anexos\AgendaLista_28072021 %281%29 %281%29.pdf" />
-    <Content Include="Imagens\1\ListaConvidado\3\Anexos\NotificacaoLista_13082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Notificacao\1\Anexos\AgendaLista_28072021 %281%29.pdf" />
-    <Content Include="Imagens\1\Ocorrencias\1\Anexos\FornecedorLista_02082021.pdf" />
-    <Content Include="Imagens\1\Ocorrencias\2\Anexos\Processo_Cydia.pdf" />
-    <Content Include="Imagens\1\Ocorrencias\4\Anexos\FornecedorLista_16082021.pdf" />
-    <Content Include="Imagens\1\Ocorrencias\5\Anexos\NotificacaoLista_13082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Ocorrencias\7\Anexos\NotificacaoLista_13082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Produtos\2\Anexos\CCLista_16082021.pdf" />
-    <Content Include="Imagens\1\Produtos\5\Anexos\TarefaLista_13082021.pdf" />
-    <Content Include="Imagens\1\Tarefa\14\Anexos\TarefaLista_13082021.pdf" />
-    <Content Include="Imagens\1\Tarefa\8\Anexos\TarefaLista_28072021.pdf" />
-    <Content Include="Imagens\1\Unidade\7\Anexos\AgendaLista_28072021 %281%29.pdf" />
-    <Content Include="Imagens\1\Veiculo\10\Anexos\AgendaLista_28072021 %281%29 %281%29.pdf" />
-    <Content Include="Imagens\1\Veiculo\11\Anexos\AgendaLista_28072021 %281%29 %281%29.pdf" />
-    <Content Include="Imagens\1\Veiculo\12\Anexos\Notificacao_1_13082021.pdf" />
-    <Content Include="Imagens\1\Veiculo\13\Anexos\NotificacaoLista_13082021 %282%29.pdf" />
-    <Content Include="Imagens\1\Veiculo\2\Anexos\TarefaLista_13082021 %281%29.pdf" />
     <Content Include="PdfViewer\build\pdf.js.map" />
     <Content Include="PdfViewer\build\pdf.worker.js.map" />
     <Content Include="PdfViewer\web\cmaps\78-EUC-H.bcmap" />
@@ -2996,100 +2910,28 @@
     <Content Include="Views\ControleAcesso\TrocarSenha.cshtml" />
     <Content Include="Views\ControleAcesso\TrocarSenhaInicio.cshtml" />
     <Content Include="Views\ControleAcesso\GerarSenha.cshtml" />
+    <Content Include="Views\Noticia\VerNoticia.cshtml" />
+    <Content Include="Views\Noticia\IncluirComentario.cshtml" />
+    <Content Include="Views\Noticia\MontarTelaUsuario.cshtml" />
+    <Content Include="Views\Noticia\MontarTelaNoticia.cshtml" />
+    <Content Include="Views\Noticia\IncluirNoticia.cshtml" />
+    <Content Include="Views\Noticia\EditarNoticia.cshtml" />
+    <Content Include="Views\Noticia\ExcluirNoticia.cshtml" />
+    <Content Include="Views\Noticia\ReativarNoticia.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Imagens\1\Agenda\13\Anexos\" />
-    <Folder Include="Imagens\1\Agenda\15\Anexos\" />
-    <Folder Include="Imagens\1\Agenda\1\Anexos\" />
-    <Folder Include="Imagens\1\Agenda\2\Anexos\" />
-    <Folder Include="Imagens\1\Agenda\3\Anexos\" />
-    <Folder Include="Imagens\1\Agenda\4 - Cópia\" />
-    <Folder Include="Imagens\1\Agenda\4\Anexos\" />
-    <Folder Include="Imagens\1\Agenda\5\Anexos\" />
-    <Folder Include="Imagens\1\Ambiente\2\Anexos\" />
-    <Folder Include="Imagens\1\Ambiente\6\Anexos\" />
-    <Folder Include="Imagens\1\Ambiente\7\Anexos\" />
-    <Folder Include="Imagens\1\Autorizacoes\1\Anexos\" />
-    <Folder Include="Imagens\1\Autorizacoes\3\Anexos\" />
-    <Folder Include="Imagens\1\Autorizacoes\4\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\10\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\11\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\1\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\2\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\3\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\4\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\5\Anexos\" />
-    <Folder Include="Imagens\1\Equipamento\6\Anexos\" />
-    <Folder Include="Imagens\1\Fornecedores\2\Anexos\" />
-    <Folder Include="Imagens\1\Fornecedores\4\Anexos\" />
-    <Folder Include="Imagens\1\ListaConvidado\2\Anexos\" />
-    <Folder Include="Imagens\1\Notificacao\20\Anexos\" />
-    <Folder Include="Imagens\1\Notificacao\21\Anexos\" />
-    <Folder Include="Imagens\1\Notificacao\22\Anexos\" />
-    <Folder Include="Imagens\1\Notificacao\23\Anexos\" />
-    <Folder Include="Imagens\1\Notificacao\2\Anexos\" />
-    <Folder Include="Imagens\1\Notificacao\4\Anexos\" />
-    <Folder Include="Imagens\1\Notificacao\5\Anexos\" />
-    <Folder Include="Imagens\1\Ocorrencias\3\Anexos\" />
-    <Folder Include="Imagens\1\Ocorrencias\6\Anexos\" />
-    <Folder Include="Imagens\1\Produtos\1\Anexos\" />
-    <Folder Include="Imagens\1\Produtos\1\Fotos\" />
-    <Folder Include="Imagens\1\Produtos\2\QR\" />
-    <Folder Include="Imagens\1\Produtos\5\QR\" />
-    <Folder Include="Imagens\1\Produtos\6\Anexos\" />
-    <Folder Include="Imagens\1\Produtos\6\Fotos\" />
-    <Folder Include="Imagens\1\Produtos\6\QR\" />
-    <Folder Include="Imagens\1\Produtos\7\QR\" />
-    <Folder Include="Imagens\1\Produtos\8\Anexos\" />
-    <Folder Include="Imagens\1\Produtos\8\QR\" />
-    <Folder Include="Imagens\1\Produtos\9\Anexos\" />
-    <Folder Include="Imagens\1\Produtos\9\QR\" />
-    <Folder Include="Imagens\1\Tarefa\10\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\12\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\1\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\2\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\3\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\4\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\6\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\7\Anexos\" />
-    <Folder Include="Imagens\1\Tarefa\9\Anexos\" />
-    <Folder Include="Imagens\1\Unidade\1\Anexos\" />
-    <Folder Include="Imagens\1\Unidade\2\Anexos\" />
-    <Folder Include="Imagens\1\Unidade\3\Anexos\" />
-    <Folder Include="Imagens\1\Unidade\4\Anexos\" />
-    <Folder Include="Imagens\1\Unidade\5\Anexos\" />
-    <Folder Include="Imagens\1\Unidade\6\Anexos\" />
-    <Folder Include="Imagens\1\Unidade\8\Anexos\" />
-    <Folder Include="Imagens\1\Usuario\1\Anexos\" />
-    <Folder Include="Imagens\1\Usuario\2\Anexos\" />
-    <Folder Include="Imagens\1\Usuario\3\Anexos\" />
-    <Folder Include="Imagens\1\Usuario\4\Anexos\" />
-    <Folder Include="Imagens\1\Veiculo\10\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\11\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\12\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\13\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\2\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\3\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\4\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\5\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\6\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\7\Anexos\" />
-    <Folder Include="Imagens\1\Veiculo\7\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\8\Fotos\" />
-    <Folder Include="Imagens\1\Veiculo\9\Fotos\" />
-    <Folder Include="Imagens\Agenda\1\11\Anexos\" />
-    <Folder Include="Imagens\Agenda\1\12\Anexos\" />
-    <Folder Include="Imagens\Agenda\1\16\Anexos\" />
-    <Folder Include="Imagens\Agenda\1\17\Anexos\" />
-    <Folder Include="Imagens\Agenda\1\18\Anexos\" />
-    <Folder Include="Imagens\Agenda\1\19\Anexos\" />
-    <Folder Include="Imagens\Agenda\1\20\Anexos\" />
-    <Folder Include="Imagens\Agenda\1\21\Anexos\" />
+    <Folder Include="Imagens\1\Agenda\" />
+    <Folder Include="Imagens\1\Equipamento\" />
+    <Folder Include="Imagens\1\Fornecedores\" />
+    <Folder Include="Imagens\1\Noticias\" />
+    <Folder Include="Imagens\1\Notificacao\" />
+    <Folder Include="Imagens\1\Produtos\" />
+    <Folder Include="Imagens\1\Tarefa\" />
+    <Folder Include="Imagens\1\Usuario\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Agenda\" />
     <Folder Include="Views\Log\" />
-    <Folder Include="Views\Noticia\" />
     <Folder Include="Views\Notificacao\" />
     <Folder Include="Views\Tarefa\" />
     <Folder Include="Views\Usuario\" />
