--- a/DataServices/DataServices.csproj
+++ b/DataServices/DataServices.csproj
@@ -171,11 +171,17 @@
     <Compile Include="Repositories\AgendaRepository.cs" />
     <Compile Include="Repositories\AssinanteAnexoRepository.cs" />
     <Compile Include="Repositories\AssinanteRepository.cs" />
+    <Compile Include="Repositories\BancoRepository.cs" />
     <Compile Include="Repositories\CategoriaAgendaRepository.cs" />
     <Compile Include="Repositories\CategoriaNotificacaoRepository.cs" />
     <Compile Include="Repositories\CategoriaTelefoneRepository.cs" />
     <Compile Include="Repositories\CategoriaUsuarioRepository.cs" />
+    <Compile Include="Repositories\CentroCustoRepository.cs" />
     <Compile Include="Repositories\ConfiguracaoRepository.cs" />
+    <Compile Include="Repositories\ContaBancariaContatoRepository.cs" />
+    <Compile Include="Repositories\ContaBancariaLancamentoRepository.cs" />
+    <Compile Include="Repositories\ContaBancariaRepository.cs" />
+    <Compile Include="Repositories\GrupoRepository.cs" />
     <Compile Include="Repositories\LogRepository.cs" />
     <Compile Include="Repositories\NoticiaComentarioRepository.cs" />
     <Compile Include="Repositories\NoticiaRepository.cs" />
@@ -185,11 +191,13 @@
     <Compile Include="Repositories\PeriodicidadeTarefaRepository.cs" />
     <Compile Include="Repositories\PeriodicidadeRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
+    <Compile Include="Repositories\SubgrupoRepository.cs" />
     <Compile Include="Repositories\TarefaAnexoRepository.cs" />
     <Compile Include="Repositories\TarefaNotificacaoRepository.cs" />
     <Compile Include="Repositories\TarefaRepository.cs" />
     <Compile Include="Repositories\TelefoneRepository.cs" />
     <Compile Include="Repositories\TemplateRepository.cs" />
+    <Compile Include="Repositories\TipoContaRepository.cs" />
     <Compile Include="Repositories\TipoPessoaRepository.cs" />
     <Compile Include="Repositories\TipoTarefaRepository.cs" />
     <Compile Include="Repositories\UFRepository.cs" />
