--- a/SMS_Presentation/SMS_Presentation.csproj
+++ b/SMS_Presentation/SMS_Presentation.csproj
@@ -51,8 +51,8 @@
     <Reference Include="BouncyCastle.Crypto, Version=1.8.6.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <HintPath>..\packages\BouncyCastle.1.8.6.1\lib\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
-    <Reference Include="Canducci.Zip, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CanducciCep.4.0.0\lib\netstandard1.6\Canducci.Zip.dll</HintPath>
+    <Reference Include="Canducci.Zip, Version=3.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CanducciCep.3.0.1\lib\net451\Canducci.Zip.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging, Version=3.4.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\packages\Common.Logging.3.4.1\lib\net40\Common.Logging.dll</HintPath>
@@ -305,13 +305,16 @@
     <Compile Include="AutoMapper\DomainToViewModelMappingProfile.cs" />
     <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
     <Compile Include="Controllers\AgendaController.cs" />
+    <Compile Include="Controllers\BancoController.cs" />
     <Compile Include="Controllers\BaseAdminController.cs" />
     <Compile Include="Controllers\ControleAcessoController.cs" />
+    <Compile Include="Controllers\GrupoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\NoticiaController.cs" />
     <Compile Include="Controllers\NotificacaoController.cs" />
     <Compile Include="Controllers\TarefaController.cs" />
+    <Compile Include="Controllers\TelefoneController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Extensions\HMTLHelperExtensions.cs" />
     <Compile Include="Extensions\MVCButtonExtensions.cs" />
@@ -325,13 +328,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AgendaViewModel.cs" />
     <Compile Include="ViewModels\AssinanteViewModel.cs" />
+    <Compile Include="ViewModels\BancoViewModel.cs" />
     <Compile Include="ViewModels\CategoriaAgendaViewModel.cs" />
+    <Compile Include="ViewModels\CentroCustoViewModel.cs" />
     <Compile Include="ViewModels\ConfiguracaoViewModel.cs" />
+    <Compile Include="ViewModels\ContaBancariaContatoViewModel.cs" />
+    <Compile Include="ViewModels\ContaBancariaLancamentoViewModel.cs" />
+    <Compile Include="ViewModels\ContaBancariaViewModel.cs" />
+    <Compile Include="ViewModels\GrupoViewModel.cs" />
     <Compile Include="ViewModels\LogViewModel.cs" />
     <Compile Include="ViewModels\NoticiaComentarioViewModel.cs" />
     <Compile Include="ViewModels\NoticiaViewModel.cs" />
     <Compile Include="ViewModels\NotificacaoAnexoViewModel.cs" />
     <Compile Include="ViewModels\NotificacaoViewModel.cs" />
+    <Compile Include="ViewModels\SubgrupoViewModel.cs" />
     <Compile Include="ViewModels\TarefaAcompanhamentoViewModel.cs" />
     <Compile Include="ViewModels\TarefaViewModel.cs" />
     <Compile Include="ViewModels\TelefoneViewModel.cs" />
@@ -2940,6 +2950,24 @@
     <Content Include="Views\Tarefa\EditarTarefa.cshtml" />
     <Content Include="Views\Tarefa\VerAnexoTarefa.cshtml" />
     <Content Include="Views\Tarefa\IncluirAcompanhamento.cshtml" />
+    <Content Include="Views\Banco\MontarTelaBanco.cshtml" />
+    <Content Include="Views\Banco\IncluirBanco.cshtml" />
+    <Content Include="Views\Banco\EditarBanco.cshtml" />
+    <Content Include="Views\Banco\ExcluirBanco.cshtml" />
+    <Content Include="Views\Banco\ReativarBanco.cshtml" />
+    <Content Include="Views\Banco\IncluirConta.cshtml" />
+    <Content Include="Views\Banco\EditarConta.cshtml" />
+    <Content Include="Views\Banco\ExcluirConta.cshtml" />
+    <Content Include="Views\Banco\ReativarConta.cshtml" />
+    <Content Include="Views\Banco\EditarContato.cshtml" />
+    <Content Include="Views\Banco\IncluirContato.cshtml" />
+    <Content Include="Views\Banco\IncluirLancamento.cshtml" />
+    <Content Include="Views\Banco\EditarLancamento.cshtml" />
+    <Content Include="Views\Telefone\MontarTelaTelefone.cshtml" />
+    <Content Include="Views\Telefone\IncluirTelefone.cshtml" />
+    <Content Include="Views\Telefone\EditarTelefone.cshtml" />
+    <Content Include="Views\Telefone\VerTelefone.cshtml" />
+    <Content Include="Views\Telefone\VerCardsTelefone.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2952,6 +2980,7 @@
     <Folder Include="Imagens\1\Tarefa\" />
     <Folder Include="Imagens\1\Usuario\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Grupo\" />
     <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
