--- a/SMS_Presentation/SMS_Presentation.csproj
+++ b/SMS_Presentation/SMS_Presentation.csproj
@@ -307,7 +307,9 @@
     <Compile Include="Controllers\AgendaController.cs" />
     <Compile Include="Controllers\BancoController.cs" />
     <Compile Include="Controllers\BaseAdminController.cs" />
+    <Compile Include="Controllers\CentroCustoController.cs" />
     <Compile Include="Controllers\ControleAcessoController.cs" />
+    <Compile Include="Controllers\FilialController.cs" />
     <Compile Include="Controllers\GrupoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogController.cs" />
@@ -336,6 +338,7 @@
     <Compile Include="ViewModels\ContaBancariaLancamentoViewModel.cs" />
     <Compile Include="ViewModels\ContaBancariaViewModel.cs" />
     <Compile Include="ViewModels\GrupoViewModel.cs" />
+    <Compile Include="ViewModels\FilialViewModel.cs" />
     <Compile Include="ViewModels\LogViewModel.cs" />
     <Compile Include="ViewModels\NoticiaComentarioViewModel.cs" />
     <Compile Include="ViewModels\NoticiaViewModel.cs" />
@@ -681,6 +684,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Imagens\Base\favicon_SystemBR.jpg" />
     <Content Include="Imagens\Base\FotoBase.jpg" />
     <Content Include="Imagens\Base\icone_imagem.jpg" />
     <Content Include="Images\1.jpg" />
@@ -2968,6 +2972,13 @@
     <Content Include="Views\Telefone\EditarTelefone.cshtml" />
     <Content Include="Views\Telefone\VerTelefone.cshtml" />
     <Content Include="Views\Telefone\VerCardsTelefone.cshtml" />
+    <Content Include="Views\Filial\MontarTelaFilial.cshtml" />
+    <Content Include="Views\Filial\IncluirFilial.cshtml" />
+    <Content Include="Views\Filial\EditarFilial.cshtml" />
+    <Content Include="Views\Filial\VerFilial.cshtml" />
+    <Content Include="Views\CentroCusto\MontarTelaCC.cshtml" />
+    <Content Include="Views\CentroCusto\IncluirCC.cshtml" />
+    <Content Include="Views\CentroCusto\EditarCC.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
